<resources>
    <string name="app_name">Φούρνος Μικροκυμάτων</string>
    <string name="tab_text_1">Στάδιο 1</string>
    <string name="tab_text_2">Στάδιο 2</string>
    <string name="tab_text_3">Στάδιο 3</string>
    <string name="button_start">ΕΝΑΡΞΗ</string>
    <string name="button_quickstart">ΓΡΗΓΟΡΗ ΕΝΑΡΞΗ</string>
    <string name="text_quickstart">30 δευτ/πτα</string>
    <string name="text_tab1">Επιλέξτε πρόγραμμα:</string>
    <string name="button_defrost">ΞΕΠΑΓΩΜΑ</string>
    <string name="button_meal">ΦΑΓΗΤΟ</string>
    <string name="button_drinks">ΠΟΤΟ</string>
    <string name="time2">:</string>
    <string name="minutes">λεπτά</string>
    <string name="seconds">δευτερόλεπτα</string>
    <string name="zeros">00</string>
    <string name="text_program_you_chose">Πρόγραμμα που επιλέξατε:</string>
    <string name="text_put_item">Παρακαλώ τοποθετήστε το αντικείμενο στον φούρνο μικροκυμάτων</string>
    <string name="to_tab3">Επόμενο Στάδιο</string>
    <string name="to_tab2">Πίσω</string>
    <string name="connected" >Συνδεδεμένο</string>
    <string name="not_connected" >Αποσυνδεδεμένο</string>
    <string name="toohot">Πολύ ζεστό</string>
    <string name="hot">Λίγο ζεστό</string>
    <string name="help">Στο Στάδιο 1 Πατώντας το κουμπί ΕΝΑΡΞΗ  μεταφέρεστε στο Στάδιο
    2 όπου καλείστε να επιλέξετε το είδος, πόσα λεπτα και δευτερόλεπτα και πόσο ζεστό να είναι το προιόν
        σας.\n\nΣτο Στάδιο 3 υπάρχει μία σύνοψη για το πρόγραμμα που επιλέξατε και απλώς επιλέγετε το
        κουμπί ΕΝΑΡΞΗ για να ξεκινήσει η διαδικασία.\n\nΤο κουμπί ΓΡΗΓΟΡΗ ΕΝΑΡΞΗ σας μεταφέρει απευθείας
        στο στάδιο 3 όπου το πρόγραμμα είναι για 30 δευτερόλεπτα\n</string>
</resources>
