<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab2">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:text="Step 2 "/>

    <Button
        android:id="@+id/button_defrost"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="164dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/button_defrost"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_meal"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="252dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/button_meal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_drinks"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="344dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/button_drinks"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_up"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="460dp"
        android:background="@drawable/roundedbutton"
        android:drawable="@android:drawable/arrow_up_float"
        android:drawingCacheQuality="auto"
        android:duplicateParentState="false"
        android:editable="false"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>